adding estimated time to summary

--- a/demo/src/app/cart/cart.component.html
+++ b/demo/src/app/cart/cart.component.html
@@ -52,7 +52,9 @@
   </div>
   <div class="card-body">
     <p>Total Items: {{ getTotalItems() }}</p>
+    <p>Estimated Time : 2-3 days </p>
     <hr>
+
     <p class="font-weight-bold">Total Amount: {{ getTotal() }} </p>
     <button class="btn btn-primary" (click)="checkout()">Checkout</button>
 
